java migration 11 to 21
Signed-off-by: Sachin Rana <sacrana324@gmail.com>